--- a/3. Объектно-ориентированное программирование/Лекция 3. Объектно-ориентированное программирование.ipynb
+++ b/3. Объектно-ориентированное программирование/Лекция 3. Объектно-ориентированное программирование.ipynb
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -606,7 +606,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Внешние и частные аттрибуты и методы\n",
+    "## Внутренние и частные аттрибуты и методы\n",
     "\n",
     "### Внутренние аттрибуты\n",
     "obj._att_name, obj._method_name():\n",
@@ -651,8 +651,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1000"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Employer:\n",
     "    def __init__(self, name, new_salary):\n",
@@ -666,7 +675,10 @@
     "    def salary(self, new_salary):\n",
     "        if new_salary < 0:\n",
     "            raise ValueError(\"Invalid salary\")\n",
-    "        self._salary = new_salary"
+    "        self._salary = new_salary\n",
+    "emp = Employer(\"Igor\", 100)\n",
+    "emp.salary = 1000\n",
+    "emp.salary"
    ],
    "metadata": {
     "collapsed": false,
@@ -682,12 +694,88 @@
     "\n",
     "Если добавить  *@attr.getter*, то метод можно будет вызвать, когда аттрибуту будет присвоено какое-то значение\n",
     "\n",
-    "Если добавить *@attr.deleter@*, то метод можно будет вызывать, когда мы удалим аттрибут"
+    "Если добавить *@attr.deleter*, то метод можно будет вызывать, когда мы удалим аттрибут"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "can't set attribute",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m/tmp/ipykernel_188925/4172078389.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m     11\u001B[0m         \u001B[0;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_salary\u001B[0m \u001B[0;34m-\u001B[0m \u001B[0;36m100\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     12\u001B[0m \u001B[0memp\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mEmployer\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"Igor\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;36m100\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 13\u001B[0;31m \u001B[0memp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msalary\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;36m500\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m: can't set attribute"
+     ]
+    }
+   ],
+   "source": [
+    "class Employer:\n",
+    "    def __init__(self, name, new_salary):\n",
+    "        self._salary = new_salary  # Создаем защищенный аттрибут\n",
+    "\n",
+    "    @property  # Создаем property метод, где название метода совпадает в точности с внутренним аттрибутом\n",
+    "    def salary(self):\n",
+    "        return self._salary\n",
+    "\n",
+    "    @salary.getter  # Используем @attr.getter перед методом к внутреннему аттрибуту, который вернет нужное нам значение аттрибута\n",
+    "    def salary(self):\n",
+    "        return self._salary - 100\n",
+    "emp = Employer(\"Igor\", 100)\n",
+    "emp.salary = 500"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [],
+   "source": [
+    "class Employer:\n",
+    "    def __init__(self, name, new_salary):\n",
+    "        self._salary = new_salary  # Создаем защищенный аттрибут\n",
+    "\n",
+    "    @property  # Создаем property метод, где название метода совпадает в точности с внутренним аттрибутом\n",
+    "    def salary(self):\n",
+    "        return self._salary\n",
+    "\n",
+    "    @salary.deleter  # Используем @attr.setter перед методом к внутреннему аттрибуту, который изменит значение аттрибута на аргумент из метода\n",
+    "    def salary(self):\n",
+    "        del self._salary\n",
+    "emp = Employer(\"Igor\", 100)\n",
+    "del emp.salary"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
