--- a/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
+++ b/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
@@ -29,20 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.14 ms, sys: 0 ns, total: 1.14 ms\n",
-      "Wall time: 1.03 ms\n"
+      "CPU times: user 5.42 ms, sys: 0 ns, total: 5.42 ms\n",
+      "Wall time: 5.37 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "x = sum((i for i in range(10000)))"
+    "x = sum((i for i in range(100000)))"
    ],
    "metadata": {
     "collapsed": false,
@@ -75,16 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 3 µs, total: 6 µs\n",
-      "Wall time: 10.7 µs\n",
-      "CPU times: user 5 µs, sys: 0 ns, total: 5 µs\n",
-      "Wall time: 9.06 µs\n"
+      "CPU times: user 1 µs, sys: 1e+03 ns, total: 2 µs\n",
+      "Wall time: 3.58 µs\n",
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 3.81 µs\n"
      ]
     }
    ],
@@ -103,14 +103,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.49 ms ± 43.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "3.48 ms ± 26.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "450 µs ± 6.49 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "274 µs ± 1.22 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -141,21 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.69 µs ± 135 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "712 µs ± 4.87 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "5.97 µs ± 330 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "751 µs ± 27.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n",
+      "452 µs ± 1.91 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "%timeit np.sum(np.array((i for i in range(10000))))\n",
-    "%timeit np.sum(np.array([i for i in range(10000)]))"
+    "%timeit np.sum(np.array([i for i in range(10000)]))\n",
+    "%timeit sum((i for i in range(10000)))"
    ],
    "metadata": {
     "collapsed": false,
@@ -166,7 +168,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 µs ± 23.9 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "5.74 µs ± 50.1 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "786 ns ± 7.35 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit np.sum(np.fromiter((i for i in range(10)), dtype=int))\n",
+    "%timeit np.sum([i for i in range(10)])\n",
+    "%timeit sum((i for i in range(10)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -214,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
@@ -338,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "outputs": [
     {
      "name": "stdout",
@@ -386,14 +414,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.06559522 2.25617638 2.27683196]\n",
-      "[0.93116261 3.66744094]\n"
+      "[0.31300339 0.07865637 0.67738013]\n",
+      "[0.58474968 0.4842902 ]\n"
      ]
     }
    ],
@@ -414,12 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "True\n",
+      "True\n",
       "False\n",
       "True\n"
      ]
@@ -427,8 +457,9 @@
    ],
    "source": [
     "# Траблы с округлением при сравнении\n",
+    "print(np.round(0.3, 15) == np.round(3 * 0.1, 15))\n",
+    "print(np.round(0.3, 16) == np.round(3 * 0.1, 16))\n",
     "print(np.round(0.3, 17) == np.round(3 * 0.1, 17))\n",
-    "\n",
     "# Используем такую функцию, чтобы проверить, равны ли массивы\n",
     "print(np.allclose(0.3, 3*0.1))"
    ],
@@ -458,13 +489,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "2240128"
+      "text/plain": "2240136"
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,13 +514,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "2.1363525390625"
+      "text/plain": "2.1363601684570312"
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,13 +590,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1 = \"new_var\"\n",
+    "sys.getrefcount(c1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "3"
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,13 +639,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
       "text/plain": "4"
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "outputs": [
     {
      "ename": "NameError",
@@ -631,7 +686,7 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[0;32m/tmp/ipykernel_7510/2663187884.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0ma\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mobj\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0ma\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;32mdel\u001B[0m \u001B[0ma\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 6\u001B[0;31m \u001B[0ma\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m/tmp/ipykernel_204680/2663187884.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0ma\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mobj\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0ma\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;32mdel\u001B[0m \u001B[0ma\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 6\u001B[0;31m \u001B[0ma\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
       "\u001B[0;31mNameError\u001B[0m: name 'a' is not defined"
      ]
     }
@@ -691,14 +746,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "(700, 10, 10)\n",
-      "(251, 6, 2)\n"
+      "(134, 5, 2)\n"
      ]
     }
    ],
@@ -716,13 +771,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "outputs": [
     {
      "data": {
-      "text/plain": "37"
+      "text/plain": "10"
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,13 +794,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
-      "text/plain": "(287, 0, 0)"
+      "text/plain": "(246, 0, 0)"
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +865,7 @@
     "2. uint - целочисленный тип данных: (0, 1, 2, .....)\n",
     "3. float - вещественный тип данных с плавающей точкой\n",
     "4. bool - логический тип данных\n",
-    "5. object - строковый тип данных\n",
+    "5. string - строковый тип данных\n",
     "\n",
     "После int, uint, float мы можем указать числа, которые будут отвечать за длину диапазона возможных значений.\n",
     "Например, np.int32 означает, что диапазон значений включает в себя 2 ** 32 (около 4 млрд) чисел, которые расположены симметрично относительно нуля;\n",
@@ -828,7 +883,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1000"
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "outputs": [
     {
      "name": "stdout",
@@ -843,7 +919,7 @@
    ],
    "source": [
     "print(np.uint8(255))\n",
-    "print(np.uint8(1000))\n",
+    "print(np.uint8(1000))  # 256 + 256 + 256 + 232\n",
     "print(np.float64(5/3))\n",
     "print(np.float16(5/3))"
    ],
@@ -868,20 +944,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "96692\n"
+      "100004\n"
      ]
     }
    ],
    "source": [
     "import resource\n",
     "\n",
-    "usage = resource.getrusage(resource.RUSAGE_SELF).ru_maxrss\n",
+    "usage = resource.getrusage(resource.RUSAGE_SELF).ru_maxrss  # выдает значения в Кб\n",
     "print(usage)"
    ],
    "metadata": {
@@ -893,8 +969,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "outputs": [],
+   "execution_count": 49,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "182048\n"
+     ]
+    }
+   ],
    "source": [
     "from memory_checking_1 import make_big_array, make_two_arrays\n",
     "ar = make_big_array()\n",
@@ -909,20 +993,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.262832\n"
+      "177.78125\n"
      ]
     }
    ],
    "source": [
     "# Peak memory usage\n",
     "ar1, ar2 = make_two_arrays()\n",
-    "print(resource.getrusage(resource.RUSAGE_SELF).ru_maxrss / 10 ** 6)"
+    "print(resource.getrusage(resource.RUSAGE_SELF).ru_maxrss / 2 ** 10)"
    ],
    "metadata": {
     "collapsed": false,
@@ -933,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "outputs": [
     {
      "name": "stdout",
@@ -957,13 +1041,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current memory usage is 167.773679MB; Peak was 167.784111MB\n"
+      "Current memory usage is 0.0008916854858398438MB; Peak was 160.00118160247803MB\n"
      ]
     }
    ],
@@ -984,13 +1068,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 53,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current memory usage is 1.825392246246338e-07Gb; Peak was 0.3906252644956112Gb\n"
+      "Current memory usage is 4.231929779052734e-06Gb; Peak was 0.3906293138861656Gb\n"
      ]
     }
    ],
