--- a/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
+++ b/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
@@ -944,13 +944,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100004\n"
+      "151908352\n"
      ]
     }
    ],
@@ -969,13 +969,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "182048\n"
+      "151949312\n"
      ]
     }
    ],
@@ -1339,6 +1339,138 @@
     "    array *= high - low\n",
     "    return array\n",
     "memory_analyze(normalize_in_place, \"Kb\", np.random.randint(1, 10, 10000).reshape(10, 100, 10))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{0.2: 361.7265625,\n 0.4: 361.7265625,\n 0.6000000000000001: 401.3984375,\n 0.8: 404.20703125,\n 1.0: 404.20703125,\n 1.2: 404.20703125,\n 1.4: 404.20703125}"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from memory_profiler import memory_usage\n",
+    "interval_sec = 0.2\n",
+    "memory_changing = memory_usage((make_two_arrays), interval=interval_sec)\n",
+    "dict(zip(np.cumsum([interval_sec] * len(memory_changing)),\n",
+    "         memory_changing))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Давайте сравним расходы памяти в случае генератора и списка."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "def stack_images(iterable, n_pixels):\n",
+    "    \"\"\"stack the images in the iterable on a (n_pixel x n_pixel) canvas\"\"\"\n",
+    "\n",
+    "    canvas = np.zeros((n_pixels,n_pixels))\n",
+    "\n",
+    "    for item in iterable:\n",
+    "        canvas += item\n",
+    "\n",
+    "    return canvas\n",
+    "\n",
+    "def get_random_image(n_pixels):\n",
+    "    \"\"\"create a random 2D image with n_pixels on the side\"\"\"\n",
+    "\n",
+    "    return np.random.rand(n_pixels, n_pixels)\n",
+    "\n",
+    "\n",
+    "def stack_using_list(n_images, n_pixels):\n",
+    "    \"\"\"iterate through a list and stack the objects\"\"\"\n",
+    "\n",
+    "    iterable = [get_random_image(n_pixels) for _ in range(n_images)]\n",
+    "    stack_images(iterable, n_pixels)\n",
+    "\n",
+    "\n",
+    "def stack_using_generator(n_images, n_pixels):\n",
+    "    iterable = (get_random_image(n_pixels) for _ in range(n_images))\n",
+    "    stack_images(iterable, n_pixels)\n",
+    "n_images = 500\n",
+    "n_pixels = 1000\n",
+    "snapshot_interval = 0.2 # seconds\n",
+    "list_mem_usage = memory_usage((stack_using_list,(n_images, n_pixels)), interval=snapshot_interval)\n",
+    "gen_mem_usage = memory_usage((stack_using_generator,(n_images, n_pixels)), interval=snapshot_interval)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{0.2: 73.83984375,\n 0.4: 74.3046875,\n 0.6000000000000001: 174.11328125,\n 0.8: 250.2734375,\n 1.0: 320.66015625,\n 1.2: 385.75390625,\n 1.4: 443.7734375,\n 1.5999999999999999: 263.0,\n 1.7999999999999998: 184.2421875,\n 1.9999999999999998: 275.1171875,\n 2.1999999999999997: 427.5234375,\n 2.4: 529.40625,\n 2.6: 545.33203125,\n 2.8000000000000003: 545.29296875,\n 3.0000000000000004: 443.78125,\n 3.2000000000000006: 169.92578125,\n 3.400000000000001: 146.3671875,\n 3.600000000000001: 215.49609375,\n 3.800000000000001: 316.93359375,\n 4.000000000000001: 373.53515625,\n 4.200000000000001: 456.35546875,\n 4.400000000000001: 553.87890625,\n 4.600000000000001: 600.21484375,\n 4.800000000000002: 555.828125,\n 5.000000000000002: 415.22265625,\n 5.200000000000002: 373.796875,\n 5.400000000000002: 418.05859375,\n 5.600000000000002: 542.16796875,\n 5.8000000000000025: 366.64453125,\n 6.000000000000003: 454.0234375,\n 6.200000000000003: 496.68359375,\n 6.400000000000003: 529.41015625,\n 6.600000000000003: 587.28515625,\n 6.800000000000003: 683.6015625,\n 7.0000000000000036: 845.47265625,\n 7.200000000000004: 547.88671875,\n 7.400000000000004: 518.28515625,\n 7.600000000000004: 501.84375,\n 7.800000000000004: 616.05078125,\n 8.000000000000004: 741.359375,\n 8.200000000000003: 869.234375,\n 8.400000000000002: 576.4609375,\n 8.600000000000001: 562.2734375,\n 8.8: 570.61328125,\n 9.0: 625.7265625,\n 9.2: 727.97265625,\n 9.399999999999999: 853.0,\n 9.599999999999998: 441.56640625,\n 9.799999999999997: 350.40234375,\n 9.999999999999996: 193.45703125,\n 10.199999999999996: 53.765625,\n 10.399999999999995: 75.79296875,\n 10.599999999999994: 122.9453125,\n 10.799999999999994: 190.06640625,\n 10.999999999999993: 252.45703125,\n 11.199999999999992: 279.4609375,\n 11.399999999999991: 328.14453125,\n 11.59999999999999: 361.49609375,\n 11.79999999999999: 396.84765625,\n 11.99999999999999: 394.24609375,\n 12.199999999999989: 418.25390625,\n 12.399999999999988: 459.55078125,\n 12.599999999999987: 510.2421875,\n 12.799999999999986: 464.8046875,\n 12.999999999999986: 414.01953125,\n 13.199999999999985: 428.0546875,\n 13.399999999999984: 404.546875,\n 13.599999999999984: 451.8984375,\n 13.799999999999983: 500.45703125,\n 13.999999999999982: 543.4140625,\n 14.199999999999982: 593.890625,\n 14.39999999999998: 642.34375,\n 14.59999999999998: 692.04296875,\n 14.79999999999998: 744.70703125,\n 14.999999999999979: 801.796875,\n 15.199999999999978: 830.91015625,\n 15.399999999999977: 859.55859375,\n 15.599999999999977: 843.0390625,\n 15.799999999999976: 837.38671875,\n 15.999999999999975: 706.33203125,\n 16.199999999999974: 717.0625,\n 16.399999999999974: 745.7578125,\n 16.599999999999973: 809.203125,\n 16.799999999999972: 876.01953125,\n 16.99999999999997: 887.5234375,\n 17.19999999999997: 776.8203125,\n 17.39999999999997: 707.73828125,\n 17.59999999999997: 648.8515625,\n 17.79999999999997: 689.66796875,\n 17.999999999999968: 738.1796875,\n 18.199999999999967: 785.96875,\n 18.399999999999967: 680.796875,\n 18.599999999999966: 666.31640625,\n 18.799999999999965: 650.03125,\n 18.999999999999964: 672.91796875,\n 19.199999999999964: 726.734375,\n 19.399999999999963: 648.95703125,\n 19.599999999999962: 613.1484375,\n 19.79999999999996: 640.0625,\n 19.99999999999996: 684.53515625,\n 20.19999999999996: 641.7734375,\n 20.39999999999996: 545.99609375,\n 20.59999999999996: 568.28515625,\n 20.799999999999958: 602.1328125,\n 20.999999999999957: 647.62109375,\n 21.199999999999957: 689.66796875,\n 21.399999999999956: 625.69140625,\n 21.599999999999955: 625.09765625,\n 21.799999999999955: 663.34765625,\n 21.999999999999954: 744.4609375,\n 22.199999999999953: 738.2265625,\n 22.399999999999952: 689.75390625,\n 22.59999999999995: 608.36328125,\n 22.79999999999995: 633.13671875,\n 22.99999999999995: 689.3671875,\n 23.19999999999995: 733.53515625,\n 23.39999999999995: 752.55078125,\n 23.599999999999948: 777.69921875,\n 23.799999999999947: 788.4296875,\n 23.999999999999947: 816.66015625,\n 24.199999999999946: 884.2734375,\n 24.399999999999945: 990.39453125,\n 24.599999999999945: 969.6640625,\n 24.799999999999944: 1046.09375,\n 24.999999999999943: 1165.92578125,\n 25.199999999999942: 1294.87109375,\n 25.39999999999994: 1358.6484375,\n 25.59999999999994: 1437.41015625,\n 25.79999999999994: 1418.30859375,\n 25.99999999999994: 1451.58203125,\n 26.19999999999994: 1455.171875,\n 26.399999999999938: 551.0234375,\n 26.599999999999937: 10.2109375,\n 26.799999999999937: 9.91796875,\n 26.999999999999936: 10.66796875}"
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(zip(np.cumsum([snapshot_interval] * len(list_mem_usage)),\n",
+    "         list_mem_usage))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{0.2: 13.19140625,\n 0.4: 15.19140625,\n 0.6000000000000001: 35.83984375,\n 0.8: 38.23828125,\n 1.0: 38.23828125,\n 1.2: 38.23828125,\n 1.4: 38.23828125,\n 1.5999999999999999: 38.23828125,\n 1.7999999999999998: 38.23828125,\n 1.9999999999999998: 38.23828125,\n 2.1999999999999997: 38.23828125,\n 2.4: 38.23828125,\n 2.6: 38.23828125,\n 2.8000000000000003: 38.23828125,\n 3.0000000000000004: 38.23828125,\n 3.2000000000000006: 38.23828125,\n 3.400000000000001: 38.23828125,\n 3.600000000000001: 38.23828125,\n 3.800000000000001: 38.23828125,\n 4.000000000000001: 30.62890625}"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(zip(np.cumsum([snapshot_interval] * len(gen_mem_usage)),\n",
+    "         gen_mem_usage))"
    ],
    "metadata": {
     "collapsed": false,
