add parallel processing and parsing

--- a/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
+++ b/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
@@ -1471,7 +1471,27 @@
    "source": [
     "Все, что мы делали до этого, мы делали на 1 ядре процессоре. Но как мы знаем, у каждого современного процессора больше 1 ядра, а у каждого ядра есть два потока!\n",
     "Соответственно, мы можем выполнять идентичные друг другу процессы параллельно!\n",
-    "Однако, давайте сначала рассмотрим основные способы ускорения выполнения наших программ.\n",
+    "Однако, давайте сначала рассмотрим основные виды программ.\n",
+    "\n",
+    "***CPU Bound*** означает, что скорость выполнения процесса ограничена скоростью центрального процессора. Задача, выполняющая вычисления на небольшом наборе чисел, например, перемножение небольших матриц, скорее всего, будет привязана к процессору.\n",
+    "\n",
+    "***I/O Bound*** означает, что скорость выполнения процесса ограничена скоростью подсистемы ввода-вывода. Задача, которая обрабатывает данные с диска, например, подсчитывает количество строк в файле, скорее всего, будет связана с вводом-выводом.\n",
+    "\n",
+    "***Memory bound*** означает, что скорость выполнения процесса ограничена объемом доступной оперативной памяти и скоростью доступа к ней. Задача, которая обрабатывает большие объемы данных в памяти, например, перемножение больших матриц, скорее всего, будет ограничена памятью.\n",
+    "\n",
+    "***Cache bound*** означает, что скорость выполнения процесса ограничена объемом и скоростью доступного кэша. Задача, которая просто обрабатывает больше данных, чем помещается в кэш, будет ограничена кэшем.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Теперь рассмотрим способы ускорения программ.\n",
     "\n",
     "***Параллелизм (parallelism)*** - одновременное выполнение нескольких операций.\n",
     "\n",
