--- a/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
+++ b/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
@@ -14,6 +14,31 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "%aimport parallelism.multithreading"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
@@ -1431,7 +1456,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Параллелизация: мультипроцессинг и многопоточность"
+    "# Параллелизация: мультипроцессинг и многопоточность\n",
+    "\n",
+    "https://realpython.com/python-concurrency/"
    ],
    "metadata": {
     "collapsed": false,
@@ -1878,6 +1905,255 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Пакет **asyncio** в документации Python называется библиотекой для написания параллельного кода. Однако **async IO** - это не многопоточность и не многопроцессорность.\n",
+    "На самом деле, **async IO** - это однопоточная, однопроцессная конструкция: в ней используется ***кооперативная многозадачность***. Другими словами, **async IO** дает ощущение параллелизма, несмотря на использование одного потока в одном процессе.\n",
+    "\n",
+    "***Корутины*** (coroutines, центральная особенность async IO) можно планировать параллельно, но они не являются параллельными по своей природе.\n",
+    "\n",
+    "Важно запомнить, что асинхронные программы выполняются на 1 потоке.\n",
+    "\n",
+    "Асинхронное программирование применяется для задач I/O. Зачастую это задачи, связанные с передачей данных по сети Интернет. Как мы выяснили, для этой задачи наиболее подходит многопоточность (concurrent.futures). Давайте проверим это еще на одном примере."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Read 10490 from https://www.jython.org\n",
+      "Read 277 from http://olympus.realpython.org/dice\n",
+      "Downloaded 160 in 17.912380933761597 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "from parallelism.multithreading import download_all_sites\n",
+    "import time\n",
+    "sites = [\n",
+    "        \"https://www.jython.org\",\n",
+    "        \"http://olympus.realpython.org/dice\",\n",
+    "      ] * 80\n",
+    "start_time = time.time()\n",
+    "download_all_sites(sites)\n",
+    "duration = time.time() - start_time\n",
+    "print(f\"Downloaded {len(sites)} in {duration} seconds\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'download_all_sites_concur' from 'parallelism.multithreading' (/Users/iakubovskii/Репетитор/Development/4. Ускорение кода и работа с памятью/parallelism/multithreading.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/10/4wpn2_y536s4d9p_khr6zgv40000gn/T/ipykernel_51134/422314516.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0mparallelism\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmultithreading\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mdownload_all_sites_concur\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0mget_ipython\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrun_line_magic\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'time'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'download_all_sites_concur(sites)'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mImportError\u001B[0m: cannot import name 'download_all_sites_concur' from 'parallelism.multithreading' (/Users/iakubovskii/Репетитор/Development/4. Ускорение кода и работа с памятью/parallelism/multithreading.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from parallelism.multithreading import download_all_sites_concur\n",
+    "%time download_all_sites_concur(sites)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
