add concurrent processing

--- a/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
+++ b/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
@@ -15,17 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -1929,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -2095,7 +2086,7 @@
       "Read 277 from http://olympus.realpython.org/dice\n",
       "Read 10490 from https://www.jython.org\n",
       "Read 277 from http://olympus.realpython.org/dice\n",
-      "Downloaded 160 in 17.912380933761597 seconds\n"
+      "Downloaded 160 in 17.66133975982666 seconds\n"
      ]
     }
    ],
@@ -2120,23 +2111,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'download_all_sites_concur' from 'parallelism.multithreading' (/Users/iakubovskii/Репетитор/Development/4. Ускорение кода и работа с памятью/parallelism/multithreading.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/10/4wpn2_y536s4d9p_khr6zgv40000gn/T/ipykernel_51134/422314516.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0mparallelism\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmultithreading\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mdownload_all_sites_concur\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      2\u001B[0m \u001B[0mget_ipython\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrun_line_magic\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'time'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m'download_all_sites_concur(sites)'\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mImportError\u001B[0m: cannot import name 'download_all_sites_concur' from 'parallelism.multithreading' (/Users/iakubovskii/Репетитор/Development/4. Ускорение кода и работа с памятью/parallelism/multithreading.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded 160 in 0.014427900314331055 seconds\n"
      ]
     }
    ],
    "source": [
     "from parallelism.multithreading import download_all_sites_concur\n",
-    "%time download_all_sites_concur(sites)"
+    "start_time = time.time()\n",
+    "download_all_sites_concur(sites)\n",
+    "duration = time.time() - start_time\n",
+    "print(f\"Downloaded {len(sites)} in {duration} seconds\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -2146,26 +2136,39 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "![widht=500](https://files.realpython.com/media/Threading.3eef48da829e.png)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "Одна из главных проблем многопоточности - сложно уловить, в какой последовательности работает каждый поток."
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Общая концепция asyncio заключается в следующем. ***Event loop*** управляет тем, как и когда выполняется каждая задача.\n",
+    "***Event loop*** знает о каждой задаче и знает, в каком состоянии она находится, но "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
