--- a/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
+++ b/4. Ускорение кода и работа с памятью/Лекция 4. Ускорение работы кода.ipynb
@@ -1902,6 +1902,42 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Зачем нужна асинхронность?\n",
+    "\n",
+    "Одна из главных проблем многопоточности - сложно уловить, в какой последовательности работает каждый поток.\n",
+    "Это так называемая проблема состояние гонки (race conditions) - логика выполнения кода зависит от порядка выполнения кода в разных потоках. Например, один поток может изменять какие-то данные, а другой поток может читать эти же данные при этом не учитывая, что эти же самые данные в этот момент могут быть изменены.\n",
+    "\n",
+    "В каждом процессорном ядре есть очень много блоков и когда программа выполняется на каком-то из потоков, часть из этих блоков может простаиваться. В итоге получается, что утилизация процессорного ядра не равна 100%. К сожалению GIL (global interpreter lock) в Python не позволяет использовать все блоки всех процессоров оптимально. Это как раз один из самых больших недостатков Python перед остальными языками программирования.\n",
+    "\n",
+    "Такую проблему как раз и решает асинхронность. Когда ресурсы многопроцессорности и многопоточности заканчиваются (число ядер ограничено), приходит время асинхронности.\n",
+    "Представим, что у нас есть веб-приложение, которым могут пользоваться тысячи клиентов одновременно и на один запрос уходит порядка 300 миллисекунд. Однако, 200 из этих миллисекунд - это ожидание ответа со стороны базы данных. Соответственно, асинхронность позволяет не ждать эти 200 миллисекунд (пока мы ждем, дальнейшее выполнение программы блокируется), а использовать их для того, что сделать запрос в базу для следующего клиента. Никто естественно нас не ограничивает в том, чтобы использовать к тому же и все логические процессоры компьютера. В конечном счете асинхронность позволяет писать высоконагруженные системы для бэкэнда на Python."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Асинхронность на примере заказа в McDonalds\n",
+    "\n",
+    "Мы приходим на кассу заказать себе кофе. Сотрудник принимает заказ и уходит ставить кофе. Пока мы ждем, сотрудник пробивает следующий заказ. Второй клиент тоже заказывает кофе. В конечном счете двум клиентам выносят кофе. Получается, что пока кофе готовилось, сотрудник не тратит время на ожидание его приготовления, а принимает новый заказ."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Реализация асинхронности в Python\n",
+    "\n",
     "Пакет **asyncio** в документации Python называется библиотекой для написания параллельного кода. Однако **async IO** - это не многопоточность и не многопроцессорность.\n",
     "На самом деле, **async IO** - это однопоточная, однопроцессная конструкция: в ней используется ***кооперативная многозадачность***. Другими словами, **async IO** дает ощущение параллелизма, несмотря на использование одного потока в одном процессе.\n",
     "\n",
@@ -2150,7 +2186,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Одна из главных проблем многопоточности - сложно уловить, в какой последовательности работает каждый поток."
+    "Общая концепция asyncio заключается в следующем. ***Event loop*** (цикл событий) управляет тем, как и когда выполняется каждая задача.\n",
+    "***Event loop*** знает о каждой задаче и знает, в каком состоянии она находится. Он выполняет задачу до тех пор, пока она не встает в ожидание. Как только она встает в ожидание, циклу управления передается другая задача."
    ],
    "metadata": {
     "collapsed": false,
@@ -2160,15 +2197,14 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "Общая концепция asyncio заключается в следующем. ***Event loop*** управляет тем, как и когда выполняется каждая задача.\n",
-    "***Event loop*** знает о каждой задаче и знает, в каком состоянии она находится, но "
-   ],
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
     }
    }
   }
